Including Java 21 in Github Actions runs.
Upgraded Gradle to 8.5

Fixed a few new linting problems, caught by '-Werror'.

Had to turn off linting "this-escape" as the Wrapper thingy violates
this, and that is a part of the API.

Moved a few test classes to get more even run.